--- a/app/src/main/res/layout/activity_commonlist.xml
+++ b/app/src/main/res/layout/activity_commonlist.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".Emergency">
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginTop="5dp"
+        android:layout_gravity="center"
+        android:gravity="left"
         android:layout_marginBottom="5dp">
+
+        <ImageButton
+            android:id="@+id/goBackCommon"
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/colorTransparent"
+            android:paddingLeft="20dp"
+            android:src="@drawable/goback" />
 
         <TextView
             android:id="@+id/ListType"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:fontFamily="@font/allerta"
