--- a/app/src/main/res/layout/activity_track_serial_adapter.xml
+++ b/app/src/main/res/layout/activity_track_serial_adapter.xml
@@ -24,8 +24,7 @@
                 android:gravity="center"
                 android:paddingVertical="5dp"
                 android:paddingEnd="15dp"
-                android:text="Sr."
-                android:textSize="18sp" />
+                android:text="Sr." />
 
             <TextView
                 android:id="@+id/trackSerialName"
@@ -34,8 +33,7 @@
                 android:fontFamily="@font/allerta"
                 android:gravity="start"
                 android:paddingVertical="5dp"
-                android:text="P Name"
-                android:textSize="18sp" />
+                android:text="P Name" />
 
             <TextView
                 android:id="@+id/trackSerialTime"
@@ -45,8 +43,7 @@
                 android:gravity="center"
                 android:paddingVertical="5dp"
                 android:paddingStart="15dp"
-                android:text="Time"
-                android:textSize="18sp" />
+                android:text="Time" />
 
             <TextView
                 android:id="@+id/trackSerialDoctor"
@@ -55,8 +52,7 @@
                 android:fontFamily="@font/allerta"
                 android:gravity="center"
                 android:paddingVertical="5dp"
-                android:text="Doctor"
-                android:textSize="18sp" />
+                android:text="Doctor" />
         </TableRow>
     </TableLayout>
 </LinearLayout>
