--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -10,18 +10,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:orientation="vertical">
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:gravity="left">
 
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/doctorNameShow"
+            android:layout_width="wrap_content"
+            android:layout_margin="5dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:fontFamily="@font/allerta"
+            android:text="Home"
             android:gravity="center"
-            android:padding="20dp"
-            android:text="Admin Panel"
-            android:textSize="25sp">
+            android:textColor="@color/colorBlack"
+            android:textSize="25sp" />
 
-        </TextView>
+        <ImageButton
+            android:id="@+id/adminLogout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:background="@color/colorTransparent"
+            android:paddingTop="5dp"
+            android:paddingRight="20dp"
+            android:src="@drawable/logout" />
     </LinearLayout>
 
     <LinearLayout
