--- a/app/src/main/res/layout/activity_departments.xml
+++ b/app/src/main/res/layout/activity_departments.xml
@@ -8,21 +8,32 @@
     tools:context=".Departments">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginTop="5dp"
+        android:layout_gravity="center"
+        android:gravity="left"
         android:layout_marginBottom="5dp">
 
+        <ImageButton
+            android:id="@+id/gobackDepartment"
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/colorTransparent"
+            android:paddingLeft="20dp"
+            android:src="@drawable/goback" />
+
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:gravity="center"
-            android:text="Departments"
-            android:textSize="25sp"
             android:fontFamily="@font/allerta"
-            android:textColor="@color/colorBlack" />
+            android:gravity="center"
+            android:paddingEnd="50dp"
+            android:text="Departments"
+            android:textColor="@color/colorBlack"
+            android:textSize="25sp" />
     </LinearLayout>
 
     <LinearLayout
