--- a/app/src/main/res/layout/activity_doctorslist.xml
+++ b/app/src/main/res/layout/activity_doctorslist.xml
@@ -6,21 +6,32 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginTop="5dp"
+        android:layout_gravity="center"
+        android:gravity="left"
         android:layout_marginBottom="5dp">
 
+        <ImageButton
+            android:id="@+id/goBackDoctorsList"
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/colorTransparent"
+            android:paddingLeft="20dp"
+            android:src="@drawable/goback" />
+
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:fontFamily="@font/allerta"
+            android:paddingEnd="50dp"
             android:gravity="center"
-            android:text="Doctors List"
+            android:text="Doctor's List"
             android:textColor="@color/colorWhite"
-            android:textSize="25sp"
-            android:textStyle="bold" />
+            android:textSize="25sp" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
