--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -13,21 +13,31 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:gravity="left"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp">
 
+            <ImageButton
+                android:id="@+id/goBackFeedback"
+                android:layout_width="45dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@color/colorTransparent"
+                android:paddingLeft="20dp"
+                android:src="@drawable/goback" />
+
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:gravity="center"
                 android:text="Feedback"
                 android:fontFamily="@font/allerta"
                 android:textColor="@color/colorAcceptButton"
-                android:textSize="45sp"
+                android:textSize="35sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
