--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,14 +13,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="center"
+        android:orientation="vertical"
         android:paddingHorizontal="30dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingVertical="30dp">
+
+            <ImageView
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:src="@drawable/logo_login" />
+
+            <TextView
+                android:layout_width="242dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/antic_slab"
+                android:text="Appointments Diary"
+                android:textSize="27dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:background="@drawable/shape_login"
-            android:elevation="10dp"
+            android:elevation="5dp"
             android:orientation="vertical">
 
             <TextView
@@ -29,7 +50,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-                android:fontFamily="@font/allerta"
+                android:fontFamily="@font/advent_pro_light"
                 android:text="Login"
                 android:textSize="32sp" />
 
