--- a/app/src/main/res/layout/activity_commonlist.xml
+++ b/app/src/main/res/layout/activity_commonlist.xml
@@ -26,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:paddingEnd="60dp"
             android:fontFamily="@font/allerta"
             android:gravity="center"
             android:textColor="@color/colorBlack"
