--- a/app/src/main/res/layout/activity_adddoctors.xml
+++ b/app/src/main/res/layout/activity_adddoctors.xml
@@ -237,6 +237,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@drawable/shape_textinput"
+                        android:inputType="numberDecimal"
                         android:ems="10"
                         android:paddingStart="8dp" />
 
@@ -296,6 +297,36 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@drawable/shape_textinput"
+                        android:ems="10"
+                        android:inputType="textEmailAddress"
+                        android:paddingStart="8dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/shape_formtitle_line"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@drawable/shape_formtitle"
+                        android:fontFamily="@font/allerta"
+                        android:padding="8dp"
+                        android:text="Password"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <EditText
+                        android:id="@+id/password"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/shape_textinput"
+                        android:inputType="textVisiblePassword"
                         android:ems="10"
                         android:paddingStart="8dp" />
                 </LinearLayout>
