--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -35,6 +35,7 @@
                 android:layout_marginTop="5dp"
                 android:gravity="center"
                 android:text="Feedback"
+                android:paddingEnd="40dp"
                 android:fontFamily="@font/allerta"
                 android:textColor="@color/colorAcceptButton"
                 android:textSize="35sp"
@@ -139,7 +140,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:isIndicator="false"
-                    android:numStars="5"
+                    android:numStars="4"
                     android:progressBackgroundTint="@color/overlay"
                     android:progressTint="@color/appMainBackground"
                     android:stepSize=".20" />
